--- a/index.html
+++ b/index.html
@@ -21,6 +21,22 @@
     <script defer src="script.js"></script>
 </head>
 <body>
+    <div class="container">
+        <div class="row text-center">
+            <div class="col-5">
+                <p>PLAYER 1</p>
+                <p id="resultPlayer1"></p>
+            </div>
+            <div class="col-2">
+                <p>VS</p>
+            </div>
+            <div class="col-5">
+                <p>PLAYER 2</p>
+                <p id="resultPlayer2"></p>
+            </div>
+            <div class="col" id="finalResult"></div>
+        </div>
+    </div>
     
 </body>
 </html>
