--- a/index.html
+++ b/index.html
@@ -22,19 +22,23 @@
 </head>
 <body>
     <div class="container">
-        <div class="row text-center">
+        <div class="row text-center align-items-center">
             <div class="col-5">
-                <p>PLAYER 1</p>
-                <p id="resultPlayer1"></p>
+                <div class="card text-primary">
+                    <p class="h3">PLAYER 1</p>
+                    <p class="h4" id="resultPlayer1"></p>
+                </div>
             </div>
             <div class="col-2">
-                <p>VS</p>
+                <p class="h4 text-danger">VS</p>
             </div>
             <div class="col-5">
-                <p>PLAYER 2</p>
-                <p id="resultPlayer2"></p>
+                <div class="card text-success">
+                    <p class="h3">PLAYER 2</p>
+                    <p class="h4" id="resultPlayer2"></p>
+                </div>
             </div>
-            <div class="col" id="finalResult"></div>
+            <div class="col mt-5 h2" id="finalResult"></div>
         </div>
     </div>
     
