--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
 </head>
 <body>
     <div class="container">
+        <h1 class="text-center mb-5">ESERCIZIO 1<h1>
         <div class="row text-center align-items-center">
             <div class="col-5">
                 <div class="card text-primary">
-                    <p class="h3">PLAYER 1</p>
-                    <p class="h4" id="resultPlayer1"></p>
+                    <p class="h4">PLAYER 1</p>
+                    <p class="h5" id="resultPlayer1"></p>
                 </div>
             </div>
             <div class="col-2">
@@ -34,11 +35,21 @@
             </div>
             <div class="col-5">
                 <div class="card text-success">
-                    <p class="h3">PLAYER 2</p>
-                    <p class="h4" id="resultPlayer2"></p>
+                    <p class="h4">PLAYER 2</p>
+                    <p class="h5" id="resultPlayer2"></p>
                 </div>
             </div>
-            <div class="col mt-5 h2" id="finalResult"></div>
+            <div class="col mt-5 h4" id="finalResult"></div>
+        </div>
+
+        <h1 class="text-center my-5">ESERCIZIO 2</h1>
+        <div class="row">
+            <div class="col text-center">
+                form
+            </div>
+            <div class="col text-center">
+                bottone per attivare
+            </div>
         </div>
     </div>
     
