--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
         </div>
 
         <h1 class="text-center my-5">ESERCIZIO 2</h1>
-        <div class="row">
+        <div class="row align-items-center">
             <div class="col text-center">
-                form
+                <input type="mail" class="form-control" id="userMail" placeholder="Inserisci la tua mail">
             </div>
             <div class="col text-center">
-                bottone per attivare
+                <button id="userChoice" class="btn btn-success">Invia</button>
             </div>
         </div>
     </div>
