--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <button id="userChoice" class="btn btn-success">Invia</button>
             </div>
         </div>
-        <div class="col mt-5 h4 text-center" id="message"></div>
+        <div class="col mt-5 h4 text-center" id="listResult"></div>
     </div>
     
 </body>
